JNekoServer/templates/iptables
# Generated by iptables-save v1.4.19.1 on Wed Oct 29 23:15:23 2014
*nat
:PREROUTING ACCEPT [2020:93575]
:INPUT ACCEPT [7:1873]
:OUTPUT ACCEPT [7:572]
:POSTROUTING ACCEPT [1:120]
-A PREROUTING -d 88.84.200.20/32 -p tcp -m tcp --dport 43430 -j DNAT --to-destination 192.168.33.143:43430
-A PREROUTING -d 88.84.200.20/32 -p udp -m udp --dport 43431 -j DNAT --to-destination 192.168.33.143:43431
-A POSTROUTING -o wan0 -j SNAT --to-source 88.84.200.20
COMMIT
# Completed on Wed Oct 29 23:15:23 2014
# Generated by iptables-save v1.4.19.1 on Wed Oct 29 23:15:23 2014
*filter
:INPUT DROP [2003:88252]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [208:26844]
-A INPUT -i lo -j ACCEPT
-A INPUT -i lan0 -j ACCEPT
-A INPUT -i wan0 -p tcp -m tcp --dport 43109 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.33.0/24 -i wan0 -o lan0 -j ACCEPT
-A FORWARD -s 192.168.33.0/24 -i lan0 -o wan0 -j ACCEPT
-A INPUT -i lan1 -p icmp -j ACCEPT
-A INPUT -i lan1 -s 0.0.0.0/32 -d 255.255.255.255/32 -j ACCEPT
-A INPUT -i lan1 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lan1 -p udp -m udp --dport 123 -j ACCEPT
-A FORWARD -d 192.168.43.0/24 -i wan0 -o lan2 -j ACCEPT
-A FORWARD -s 192.168.43.0/24 -i lan2 -o wan0 -j ACCEPT
-A INPUT -i lan2 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lan2 -s 0.0.0.0/32 -d 255.255.255.255/32 -j ACCEPT

-A FORWARD -i lan1 -o lan0 -j DROP
-A FORWARD -i lan1 -o lan2 -j DROP
-A INPUT -i lan1 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lan1 -s 0.0.0.0/32 -d 255.255.255.255/32 -j ACCEPT
-A FORWARD -d 172.27.0.0/16 -i wan0 -o lan1 -j ACCEPT
-A FORWARD -s 172.27.0.0/16 -i lan1 -o wan0 -j ACCEPT
COMMIT
# Completed on Wed Oct 29 23:15:23 2014
# Generated by iptables-save v1.4.19.1 on Wed Oct 29 23:15:23 2014
*mangle
:PREROUTING ACCEPT [2394:124652]
:INPUT ACCEPT [2378:119132]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [208:26844]
:POSTROUTING ACCEPT [208:26844]
##JNEKO_IPTABLE_SETMARK##-A POSTROUTING -o wan0 -j TTL --ttl-set 64
COMMIT
# Completed on Wed Oct 29 23:15:23 2014
